Correct view in all modern browsers when the card contains an image. last paragraph should align to the bottom of the card when used in a grid.

--- a/components/card/src/_mixin.scss
+++ b/components/card/src/_mixin.scss
@@ -105,6 +105,7 @@
 
 @mixin dictu-card__image-container {
   max-height: var(--govnl-card-default-image-container-max-height, 10rem);
+  overflow: hidden;
 
   img {
     height: 100%;
@@ -172,4 +173,5 @@
 @mixin dictu-card__paragraph {
   font-size: var(--govnl-card-content-font-size);
   line-height: 150%;
+  margin-top: auto;
 }
